# mentci-egui

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix
src/: app.rs  control.rs  daemon_client.rs  error.rs  lib.rs  main.rs  policy_editor.rs
src/render/: constructor.rs  diagnostics.rs  header.rs  inspector.rs  mod.rs  wire.rs  workbench.rs
src/render/canvas/: flow_graph.rs  mod.rs
tests/: daemon_client.rs  policy_editor.rs
