[package]
name         = "mentci-egui"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/mentci-egui"
description  = "mentci-egui — interactive egui client for the mentci daemon over signal-mentci."

[[bin]]
name = "mentci-egui"
path = "src/main.rs"

[dependencies]
nota-next    = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", features = ["nota-text"] }
signal-mentci = { git = "https://github.com/LiGoldragon/signal-mentci", branch = "main", features = ["nota-text"] }
# Re-founded client model: the egui shell consumes mentci-lib's ObservationModel
# (MVU core keyed by component socket) and its NOTA-fallback renderer instead of
# keeping its own approval/transcript state.
mentci-lib   = { git = "https://github.com/LiGoldragon/mentci-lib", branch = "main", features = ["nota-text"] }
eframe       = "0.27"
egui         = "0.27"
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
mentci             = { git = "https://github.com/LiGoldragon/mentci", branch = "main" }
meta-signal-mentci = { git = "https://github.com/LiGoldragon/meta-signal-mentci", branch = "main" }
tempfile           = "3"

[lints.rust]
unused = "allow"
dead_code = "allow"
